# bus-boards

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  buildDB.sh  config.toml  crs.csv  first-regions.json  localities.py  rebuildDB.sh  refresh_localities.py  requirements.txt  sources.yaml  stance_grouping.py  stations.py
.cargo/: config.toml
.github/workflows/: ci.yml
bus-site/: .env  .gitignore  agency_mappings.json  first-regions.json  first.env  global.d.ts  import_gtfs.ts  import_lothian.ts  import_passenger.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
bus-site/gtfs/: indexes.sql  model.sql
bus-site/realtime/: feeder.ts  gtfs_microservice.ts
bus-site/src/: api.type.ts  app.css  app.d.ts  app.html  db.ts  hooks.server.ts  stores.ts
bus-site/src/darwin/: darwin.ts
bus-site/src/darwin/wsdl/: README.md  rtti_2007-10-10_ldb_common_types.xsd  rtti_2012-01-13_ldb_types.xsd  rtti_2015-11-27_ldb_common_types.xsd  rtti_2016-02-16_ldb_types.xsd  rtti_2017-02-02_ldb_common_types.xsd  rtti_2017-10-01_ldb_common_types.xsd  rtti_2017-10-01_ldb_types.xsd  rtti_2021-11-01_ldb_types.xsd  wsdl_1.wsdl
bus-site/src/leaflet/: README
bus-site/src/leaflet/core/: Util.js
bus-site/src/leaflet/geometry/: LineUtil.js
bus-site/src/map/: GeoJSON.svelte  Map.svelte  Marker.svelte  README.md  Tiles.svelte
bus-site/src/realtime/: feeder.ts  feeder_bods.ts  feeder_coaches.ts  feeder_ember.ts  feeder_first.ts  feeder_lothian.ts  feeder_passenger.ts  feeder_stagecoach.ts  feeder_util.ts  gtfs_microservice.ts  gtfs_protobuf.ts  runner.js
bus-site/src/routes/: +error.svelte  +layout.svelte  +page.svelte  Alert.svelte  copyright.svelte  header.svelte  search_suggestion.svelte
bus-site/src/routes/api/: darwin.ts
bus-site/src/routes/api/search/: +server.ts
bus-site/src/routes/api/service/: +server.ts  coaches.ts  first.ts  gtfs-cache.ts  gtfs-realtime.ts  gtfs_protobuf.ts  passenger-sources.json  passenger.ts  realtime_util.ts  stagecoach.ts
bus-site/src/routes/api/stop/: +server.ts  operators.ts
bus-site/src/routes/api/train/: +server.ts
bus-site/src/routes/locality/[locality]/: +page.server.ts  +page.svelte
bus-site/src/routes/search/: +page.svelte  +page.ts
bus-site/src/routes/service/[service]/: +page.server.ts  +page.svelte  HTMLMarker.svelte  stop.svelte
bus-site/src/routes/service/[type]/[service]/: +page.server.ts  +page.svelte  GeoJSON.svelte  HTMLMarker.svelte  connection.svelte  stop.svelte
bus-site/src/routes/stop/[locality]/[name]/: +page.server.ts  +page.svelte  service.svelte
bus-site/src/routes/stop/[stop]/: +page.server.ts  +page.svelte  service.svelte
server/: .gitignore  Cargo.toml  agency_mappings.json  build.rs  config.toml  first-regions.json  operators.json  sources.yaml
server/.cargo/: config.toml
server/src/: config.rs  lib.rs
server/src/darwin/: darwin_token_types_2013-11-28.wsdl  darwin_token_types_2013-11-28.xsd  rtti_2015-11-27_ldb_types.xsd  rtti_2016-02-16_ldb_common_types.xsd  rtti_2021-11-01_ldb.wsdl
src/: bods.rs  bus_prediction.rs  coaches.rs  config.rs  db.rs  disruptions.rs  ember.rs  first.rs  lib.rs  lothian.rs  main.rs  passenger.rs  siri.rs  siri.xsd  stagecoach.rs  util.rs  xml_schema_generator
