[package]
name = "BusBoardsServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
prost = "0.12.3"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
bytes = "1.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
zip = "0.6.6"
futures-io = "0.3.30"
async_zip = { version = "0.0.16", features = ["tokio"] }
futures = "0.3.30"
serde-xml-rs = "0.6.0"
xml-schema = "0.3.0"
yaserde = "0.10.0"
yaserde_derive = "0.10.0"
xml-schema-derive = "0.3.0"
chrono = { version = "0.4.34", features = [] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
r2d2_sqlite = "0.23.0"
r2d2 = "0.8.10"

[build-dependencies]
prost-build = "0.12.3"
