[package]
name = "BusBoardsServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
prost = "0.12.3"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
bytes = "1.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
zip = "0.6.6"
futures-io = "0.3.30"
async_zip = { version = "0.0.16", features = ["tokio"] }
futures = "0.3.30"
xml-schema = "0.3.0"
xml-schema-derive = "0.3.0"
chrono = { version = "0.4.34", features = ["serde"] }
rusqlite = { version = "0.30.0", features = ["bundled", "rusqlite-macros", "array"] }
r2d2_sqlite = "0.23.0"
r2d2 = "0.8.10"
serde-xml-rust = "0.6.0"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["compression-full"] }
config = "0.14.0"
strum = "0.26.1"
strum_macros = "0.26.1"
nu-ansi-term = "0.50.0"
tokio-stream = "0.1.14"
itertools = "0.12.1"
geo-types = { version = "0.7.12", features = ["serde"] }
memoize = "0.4.2"
geo = "0.28.0"
regex = { version = "1.10.3" }
url = "2.5.0"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.7.0", features = ["v4"] }
timeout-iterator = "1.1.7"
chrono-tz = "0.8.6"

[build-dependencies]
prost-build = "0.12.3"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
#debug = true
