[package]
name = "BusBoardsServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json", "stream", "blocking", "gzip", "rustls-tls-native-roots"], default-features = false }
bytes = "1.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
zip = "2.1.3"
futures-io = "0.3.30"
futures = "0.3.30"
chrono = { version = "0.4.34", features = ["serde"] }
rusqlite = { version = "0.30.0", features = ["bundled", "rusqlite-macros", "array", "functions"] }
r2d2_sqlite = "0.23.0"
r2d2 = "0.8.10"
serde-xml-rust = "0.6.0"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["compression-full"] }
config = "0.14.0"
strum = "0.26.1"
strum_macros = "0.26.1"
nu-ansi-term = "0.50.0"
tokio-stream = "0.1.14"
itertools = "0.12.1"
geo-types = { version = "0.7.12", features = ["serde"] }
memoize = "0.4.2"
geo = "0.28.0"
regex = { version = "1.10.3" }
url = "2.5.0"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.7.0", features = ["v4"] }
chrono-tz = "0.8.6"
piz = { version = "0.5.1", default-features = false }
memmap = "0.7.0"
csv = "1.3.0"
polyline = "0.11.0"
phf = { version = "0.11.1", features = ["macros"] }
suppaftp = { version = "^6", features = ["rustls"] }
sorensen = "0.2.0"
log = "0.4.22"
env_logger = "0.11.3"
rustls = { version = "0.21.12", features = ["dangerous_configuration"] }
spex = "0.2.1"
tempfile = "3.10.1"
polars = { version = "0.41.3", features = ["lazy", "strings", "object", "dtype-struct", "regex", "performant", "is_in", "is_unique", "partition_by"] }
prost = "0.12.3"
lonlat_bng = { version = "0.6.33", git = "https://github.com/urschrei/lonlat_bng.git" }
rand = "0.8.5"
geographiclib-rs = "0.2.4"
serde_regex = "1.1.0"
serde_nested_with = "0.2.5"
serde_with = { version = "3.9.0", features = ["chrono"] }
yaserde = "0.10.1"
yaserde_derive = "0.10.1"
async-trait = "0.1.81"
xml-rs = "0.8.20"
dashmap = { version = "6.0.1", features = ["rayon"] }

[build-dependencies]
#prost-build = "0.12.3"

[profile.production]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
#debug = true
